@@ -15,7 +15,7 @@
 	<exclude-pattern>*\.(?!php$)</exclude-pattern>
 
 	<!-- Configs -->
-	<config name="minimum_supported_wp_version" value="5.6" />
+	<config name="minimum_supported_wp_version" value="5.7" />
 	<config name="testVersion" value="7.0-" />
 
 	<rule ref="PHPCompatibility">
