@@ -38,7 +38,7 @@ Our global support team is available to answer questions you may have about WooC
 
 = Requirements =
 
-* WordPress 5.6 or newer.
+* WordPress 5.7 or newer.
 * WooCommerce 5.8 or newer.
 * PHP version 7.0 or newer. PHP 7.2 or newer is recommended.
 
@@ -99,7 +99,8 @@ Please note that our support for the checkout block is still experimental and th
 == Changelog ==
 
 = 3.6.0 - 2022-xx-xx =
-*
+* Update - Bump minimum required version of WooCommerce from 4.4 to 4.5.
+* Update - Bump minimum required version of WordPress from 5.6 to 5.7.
 
 = 3.5.0 - 2021-12-29 =
 * Fix - Error when renewing subscriptions with saved payment methods disabled.
