@@ -1,7 +1,8 @@
 *** WooCommerce Payments Changelog ***
 
 = 3.6.0 - 2022-xx-xx =
-*
+* Update - Bump minimum required version of WooCommerce from 4.4 to 4.5.
+* Update - Bump minimum required version of WordPress from 5.6 to 5.7.
 
 = 3.5.0 - 2021-12-29 =
 * Fix - Error when renewing subscriptions with saved payment methods disabled.
